--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>   Font Manipulator</title>
+  <title>Font Manipulator</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -20,7 +20,7 @@
       to reduce the size of the square and to increase the size of 
       the square keep your left and right wrist far from each other.</span>
     <br>
-
+    <h4 id="size"></h4>
   </h3>
 </center>
 <div class="footer_div">DEVELOPED BY: AARINI SINGH</div>
